# Design-Patterns-in-Modern-CPP

./: .gitignore  CMakeLists.txt  README.md
02_SOLID_Design_Principles/: CMakeLists.txt  DependencyInversionPrinciple.cpp  LiskovSubstitutionPrinciple.cpp  OpenClosePrinciple.cpp  SingleRespensabilityPrinciple.cpp  main.cpp
03_Builder/: BuilderCodingExercise.cpp  CMakeLists.txt  README.md  builder.cpp  groovy_style.cpp  main.cpp
03_Builder/BuilderFacets/: Facets.cpp  PersonAddressBuilder.h
04_Factory/: AbstractFactory.cpp  CMakeLists.txt  TeaFactory.h
05_Prototype/: CMakeLists.txt  Prototype.cpp  README.md
06_Singleton/: BoostDI.cpp  CMakeLists.txt  SingletonTest.cpp
07_Adapter/: AdapterCodingExercise.cpp  CMakeLists.txt
08_Bridge/: BridgeCodingExercise.cpp  CMakeLists.txt
09_Composite/: ArrayBackedProps.cpp  CMakeLists.txt  Neurons.cpp  main.cpp
10_Decorator/: CMakeLists.txt  Decorator.cpp
12_Flyweight/: CMakeLists.txt  Capitalize.cpp  Flyweight.cpp  main.cpp
13_Proxy/: CMakeLists.txt
14_ChainOfResponsability/: CMakeLists.txt  ChainOfResponsability.cpp  cor_broker.cpp  main.cpp
15_Command/: CMakeLists.txt  Command.cpp  command_composite.cpp  command_undo.cpp  main.cpp
16_Interpreter/: CMakeLists.txt
17_Iterator/: CMakeLists.txt  binary_tree_iterator.cpp  iterator.cpp
18_Mediator/: CMakeLists.txt  ChatRoom.cpp  Soccer.cpp  main.cpp
19_Memento/: CMakeLists.txt
20_Observer/: CMakeLists.txt  SaferObservable.hpp  main.cpp
21_State/: CMakeLists.txt  Classic.cpp  Handmade.cpp  Msm.cpp  main.cpp
22_Strategy/: CMakeLists.txt  main.cpp  strategy_dynamic.cpp  strategy_static.cpp
23_TemplateMethod/: CMakeLists.txt
24_Visitor/: CMakeLists.txt  main.cpp  visitor_acyclic.cpp  visitor_double.cpp  visitor_intrusive.cpp  visitor_multimethods.cpp  visitor_reflective.cpp
